--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Handy Man</title>
 </head>
 <body>
+	
+	<h1>Hello World</h1>
 
 </body>
 </html>
