--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Handy Man</title>
+	<title><center>Handy Man</center></title>
 </head>
 <body>
 	
-	<h1>Hello World</h1>
-
+	<h1><center>Hello World</center></h1>
+	<hr>
 </body>
 </html>
