--- a/Prototype webpage/webpage.html
+++ b/Prototype webpage/webpage.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body>
-		<img src="wrench.gif" width=20% alt="wrench" />
+		<img src="HandymanLogo.gif" width=20% alt="wrench" />
 		<h1><center>Welcome to the Handyman Website</center></h1>
 		
 		<h3><center>This site is designed to help customers find local handymen and help handymen to 
