--- a/Hmessages.html
+++ b/Hmessages.html
@@ -11,8 +11,8 @@
 	<hr>
 
 	 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="Hmessages.html">Messages</a>
+  <a href="#home">Home</a>
+  <a class="active" href="Hmessages.html">Messages</a>
   <a href="#write reviews">Read Reviews</a>
   <input type="text" placeholder="Search..">
 </div> 
