--- a/customerSide.html
+++ b/customerSide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><center>Customer</center></title>
+	<title>Customer</title>
 	<input type="button" value="Login" style="float: right;">
 	
 </head>
