Reorganization and updating files with file addresses to include folder names where needed.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
 	</head>
 
 	<body>
-		<img src="HandymanLogo.gif" width=30% alt="logo" />
+		<img src="images/HandymanLogo.gif" width=30% alt="logo" />
 		<h1><center>Welcome to the Handyman Website</center></h1>
 		
 		<h3><center>Please select your role to be guided to the appropriate resources<br /></center></h3>
 		<hr />
-		<form action="handymanSide.html">
+		
+		
+	<style type="text/css">
+#element1 {padding-left : 45%; float:left;}
+#element2 {padding-right: 45%; float:right;}
+</style>
+
+<div id="element1">
+		<form action="pages/Hhome.html">
 			<input type="submit"  value="Handyman" />
 		</form>
-		
-		<form action="customerSide.html">
+</div>
+<div id="element2">
+		<form action="pages/Chome.html">
 			<input type="submit" value="Customer" />
 		</form>
- 
+</div>
+
+	
+	
+	
+		
+		
+		
+		
 
 	
 	</body>
