--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -11,14 +11,14 @@
 	<hr>
 	
 	<div class="topnav">
-  <a href="#home">Home</a>
-  <a class="active" href="#messages">Messages</a>
-  <a href="#search workers">Search Workers</a>
-  <a href="#write reviews">Write Reviews</a>
+  <a href="Chome.html">Home</a>
+  <a href="Cmessages.html">Messages</a>
+  <a class="active" href="#search workers">Search Workers</a>
+  <a href="Creviews">Write Reviews</a>
   <input type="text" placeholder="Search..">
 </div> 
 		
-		
+	
 		<style>
 /* Add a black background color to the top navigation bar */
 .topnav {
