--- a/pages/Creviews.html
+++ b/pages/Creviews.html
@@ -11,10 +11,10 @@
 	<hr>
 	
 	<div class="topnav">
-  <a href="#home">Home</a>
-  <a href="#messages">Messages</a>
-  <a class="active" href="#search workers">Search Workers</a>
-  <a href="#write reviews">Write Reviews</a>
+  <a href="Chome.html">Home</a>
+  <a href="Cmessages.html">Messages</a>
+  <a href="Csearchworkers.html">Search Workers</a>
+  <a class="active" href="#write reviews">Write Reviews</a>
   <input type="text" placeholder="Search..">
 </div> 
 		
