--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -17,7 +17,7 @@
   <a href="Creviews.html">Write Reviews</a>
   <input type="text" placeholder="Search..">
 </div> 
-		<form action="">
+		<form action="Plumbers.html">
 			<input type="submit" value="Plumber" />
 		</form>
 		
