--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -10,6 +10,8 @@
 	<h1><center>Customer Page</center></h1>
 	<hr>
 	
+	
+	
 	<div class="topnav">
   <a href="Chome.html">Home</a>
   <a href="Cmessages.html">Messages</a>
@@ -18,6 +20,18 @@
   <input type="text" placeholder="Search..">
 </div> 
 		
+	<form action="Plumbers.html">
+			<input type="submit" value="Plumber" />
+		</form>
+		
+		<form action="">
+			<input type="submit" value="Handyman" />
+		</form>
+	
+		<form action="">
+			<input type="submit" value="Other" />
+		</form>
+	
 	
 		<style>
 /* Add a black background color to the top navigation bar */
