--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -2,23 +2,22 @@
 <html>
 <head>
 	<title>Customer</title>
-	<input type="button" value="Login" style="float: right;">
-	
+	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>	
 </head>
 <body>
-	
+
 	<h1><center>Customer Page</center></h1>
 	<hr>
-	
+
 	<div class="topnav">
   <a class="active" href="Chome.html">Home</a>
   <a href="Cmessages.html">Messages</a>
   <a href="Csearchworkers.html">Search Workers</a>
   <a href="Creviews.html">Write Reviews</a>
   <input type="text" placeholder="Search..">
-</div> 
-		
-	
+</div>
+
+
 		<style>
 /* Add a black background color to the top navigation bar */
 .topnav {
@@ -72,6 +71,6 @@
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-}		
+}
 </body>
 </html>
