--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<input type="button" value="Login" style="float: right;">
+
+	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
 	<title>Worker</title>
-	
+
 </head>
 <body>
 
@@ -15,11 +16,11 @@
   <a href="Hmessages.html">Messages</a>
   <a href="Hreviews.html">Read Reviews</a>
   <input type="text" placeholder="Search..">
-</div> 
+</div>
 
 
-	
-		<style>
+
+<style>
 /* Add a black background color to the top navigation bar */
 .topnav {
   overflow: hidden;
@@ -72,10 +73,10 @@
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-}		
-	
-	
-	
-	
+}
+
+</style>
+
+
 </body>
 </html>
