Created Happly for the worker to apply using google forms. Also updated all handyman files to link to the apply page.

--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -14,6 +14,7 @@
   <a href="Hhome.html">Home</a>
   <a href="Hmessages.html">Messages</a>
   <a class="active"href="Hreviews.html">Read Reviews</a>
+  <a href="Happly.html">Apply</a>
   <input type="text" placeholder="Search..">
 </div> 
 
