--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -15,6 +15,7 @@
   <a class="active" href="Hhome.html">Home</a>
   <a href="Hmessages.html">Messages</a>
   <a href="Hreviews.html">Read Reviews</a>
+  <a href="Happly.html">Apply</a>
   <input type="text" placeholder="Search..">
 </div>
 
