--- a/pages/Hmessages.html
+++ b/pages/Hmessages.html
@@ -14,6 +14,8 @@
   <a href="Hhome.html">Home</a>
   <a class="active" href="Hmessages.html">Messages</a>
   <a href="Hreviews.html">Read Reviews</a>
+  <a href="Happly.html">Apply</a>
+
   <input type="text" placeholder="Search..">
 </div> 
 
