--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -28,11 +28,12 @@
 			<input type="submit" value="Handyman" />
 		</form>
 	
-		<form action="">
+		<!-- <form action=""> 
 			<input type="submit" value="Other" />
-		</form>
-	
-	
+		</form> -->
+
+  <!-- The following frame adds the list of jobs submitted on the google form application -->
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A2:B&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="700" seamless frameborder="0"></iframe>
 		<style>
 /* Add a black background color to the top navigation bar */
 .topnav {
