--- a/pages/Happly.html
+++ b/pages/Happly.html
@@ -19,7 +19,7 @@
   <input type="text" placeholder="Search..">
 </div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOXk_Dp5ON7qGdHUfIsbGFn045AwmSCK2pX1cR2HvOqApKEg/viewform?embedded=true" 
-	width="640" height="3075" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)>Loading…</iframe>
+	width="640" height="3075" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)">Loading…</iframe>
 
 
 
