--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -76,26 +76,41 @@
 }		
 </style>
 
+<p> Reviews:<br />
+<p><span id="first"> </span><br />
 
-<p> Reviews: <span id="first"> </span><br />
+    <script >
 
-	<script >
-	
-		const api_url = "https://api.apispreadsheets.com/data/2233/";
-		
-		async function getISS(){
-			const response = await fetch(api_url);
-			const data = await response.json();
-			const first = data.toString();
-			document.getElementById('first').textContent = data;
-			console.log(data);
-		}
-	
-		
-		getISS();
-		
-	
-	</script>
+        const api_url = "https://api.apispreadsheets.com/data/2233/";
+    async function getISS(){
+            const response = await fetch(api_url);
+            const data = await response.json();
+            // const first = data.toString();
+            // document.getElementById('first').textContent = data;
+            // console.log(data);
+      var myString = JSON.stringify(data);
+	  
+	  myString = myString.substring(9, myString.length-2);
+	  var editedString = "<br>";
+	  
+	  editedString = myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+	  myString = myString.slice(myString.indexOf("}")+1);
+	  while (myString.indexOf("{") > 0){
+		editedString = editedString + "<br>" + myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+		myString = myString.slice(myString.indexOf("}")+1)
+	  }
+	  
+	  //var editedString = myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+	  
+	  
+	  
+      document.getElementById("first").innerHTML = editedString;
+	  
+        }
+    getISS();
+
+
+    </script>
 	
 	
 </body>
