--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		body {
 		background-size:cover;
 		background-color: #A52A2A;
-		background-image: url(Images/Toolz.jpg);
+		background-image: [[Images/Toolz.jpg]];
 		background-position: center;
 		background-repeat: no-repeat;
 		width: 100%;
