--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		body {
 		background-size:cover;
 		background-color: #A52A2A;
-		background-image: [[Images/Toolz.jpg]];
+		background-image: url(images/Toolz.jpg);
 		background-position: center;
 		background-repeat: no-repeat;
 		width: 100%;
@@ -41,7 +41,7 @@
 
 	<body>
 		<a href = "index.html">
-		<img src ="Images/Logo.png" id ="Logo" alt ="" height = 100 width = 200>
+		<img src ="images/Logo.png" id ="Logo" alt ="" height = 100 width = 200>
 		</a>	
 		<h2 class ="solid"> Welcome to the Handyman Website</h1>
 		<div id="Handy">
