--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -2,34 +2,20 @@
 <html>
 <head>
 	<title>Customer</title>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>	
-</head>
-<body>
+	
+	<style type="text/css">
 
-	<h1><center>Customer Page</center></h1>
-	<hr>
-
-	<div class="topnav">
-  <a class="active" href="Chome.html">Home</a>
-  <a href="Cmessages.html">Messages</a>
-  <a href="Csearchworkers.html">Search Workers</a>
-  <a href="Creviews.html">Write Reviews</a>
-  <input type="text" placeholder="Search..">
-</div>
-
-
-		<style>
-/* Add a black background color to the top navigation bar */
 .topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+overflow: hidden;
+background-color: #800000;
+border: 2px solid black;
 }
-
+		
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -72,5 +58,54 @@
     border: 1px solid #ccc;
   }
 }
+
+
+h2 {
+color: #800000;
+font-weight: bold;
+text-align:center;
+}
+
+body {
+background-image: url(../Images/WoodFloor.jpg);
+border: 5px solid transparent;
+padding: 0px 20px 500px 20px;
+border-color:black;
+
+}
+
+#Plumber, #Handyman, #Other {
+padding-top: 10px;
+}
+	</style>
+	
+</head>
+<body>
+	<h1>
+<a href = "..\index.html">	
+<img src = "..\Images\Logo.png" 
+id = "Logo" alt="" height = 100 width = 200>
+</a></h1>
+	<h2>Customer</h2>
+	<hr>
+	
+	<div class="topnav">
+  		<a href="Cmessages.html">Messages</a>
+  		<a href="Csearchworkers.html">Search Workers</a>
+  		<a href="Creviews.html">Write Reviews</a>
+  		<input type="text" placeholder="Search..">
+	</div> 
+		<form id = "Plumber" action="">
+			<input type="submit" value="Plumber" />
+		</form>
+		
+		<form id = "Handyman" action="">
+			<input type="submit" value="Handyman" />
+		</form>
+	
+		<form id = "Other" action="">
+			<input type="submit" value="Other" />
+		</form>		
 </body>
 </html>
+
