--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -67,7 +67,7 @@ text-align:center;
 }
 
 body {
-background-image: url(../Images/WoodFloor.jpg);
+background-image: url(../images/WoodFloor.jpg);
 border: 5px solid transparent;
 padding: 0px 20px 500px 20px;
 border-color:black;
@@ -83,7 +83,7 @@ padding-top: 10px;
 <body>
 	<h1>
 <a href = "..\index.html">	
-<img src = "..\Images\Logo.png" 
+<img src = "..\images\Logo.png" 
 id = "Logo" alt="" height = 100 width = 200>
 </a></h1>
 	<h2>Customer</h2>
