--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -1,38 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
+<input type="button" value="Login" style="float: right;">
 	<title>Worker</title>
+	
+	<style type ="text/css">
 
-</head>
-<body>
-
-	<h1><center>Worker page</center></h1>
-	<hr>
-
-	 <div class="topnav">
-  <a class="active" href="Hhome.html">Home</a>
-  <a href="Hmessages.html">Messages</a>
-  <a href="Hreviews.html">Read Reviews</a>
-  <a href="Happly.html">Apply</a>
-  <input type="text" placeholder="Search..">
-</div>
-
-
-
-<style>
-/* Add a black background color to the top navigation bar */
 .topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+overflow: hidden;
+background-color: #800000;
+border: 2px solid black;
 }
-
+		
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -76,8 +60,42 @@
   }
 }
 
-</style>
 
+h2 {
+color: #800000;
+font-weight: bold;
+text-align:center;
+}
+
+body {
+background-image: url(../images/WoodFloor.jpg);
+border: 5px solid transparent;
+padding: 0px 20px 500px 20px;
+border-color:black;
+
+}
+
+	</style>
+	
+</head>
+<body>
+	<h1>
+<a href = "..\index.html">	
+<img src = "..\images\Logo.png" 
+id = "Logo" alt="" height = 100 width = 200>
+</a></h1>	
+</head>
+<body>
+
+	<h2>Worker</h2>
+	<hr>
+
+	 <div class="topnav">
+  <a class="active" href="Hhome.html">Home</a>
+  <a href="Hmessages.html">Messages</a>
+  <a href="Hreviews.html">Read Reviews</a>
+  <input type="text" placeholder="Search..">
+</div> 
 
 </body>
 </html>
