--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -30,11 +30,12 @@ border: 2px solid black;
 }
 
 /* Style the "active" element to highlight the current page */
+/*
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
-
+*/
 /* Style the search box inside the navigation bar */
 .topnav input[type=text] {
   float: right;
@@ -91,7 +92,7 @@ id = "Logo" alt="" height = 100 width = 200>
 	<hr>
 
 	 <div class="topnav">
-  <a class="active" href="Hhome.html">Home</a>
+  <a href="Hhome.html">Home</a>
   <a href="Hmessages.html">Messages</a>
   <a href="Hreviews.html">Read Reviews</a>
   <input type="text" placeholder="Search..">
