--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<input type="button" value="Login" style="float: right;">
+	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
 	<title>Worker</title>
 	
 	<style type ="text/css">
