--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
 	<title>Customer</title>
 	
 	<style type="text/css">
