--- a/pages/Creviews.html
+++ b/pages/Creviews.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
 	<title>Customer</title>
-	<input type="button" value="Login" style="float: right;">
 	
 	
 	
