--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -95,6 +95,7 @@ id = "Logo" alt="" height = 100 width = 200>
   <a href="Hhome.html">Home</a>
   <a href="Hmessages.html">Messages</a>
   <a href="Hreviews.html">Read Reviews</a>
+  <a href="Happly.html">Apply</a>
   <input type="text" placeholder="Search..">
 </div> 
 
