--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -91,6 +91,8 @@ id = "Logo" alt="" height = 100 width = 200>
 	<hr>
 	
 	<div class="topnav">
+		
+  		<a class="active" href="Chome.html">Home</a>
   		<a href="Cmessages.html">Messages</a>
   		<a href="Csearchworkers.html">Search Workers</a>
   		<a href="Creviews.html">Write Reviews</a>
