--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
+	
 	<title>Worker</title>
 	
 	<style type ="text/css">
@@ -20,7 +20,8 @@ border: 2px solid black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  border-right: 1px solid black;
 }
 
 /* Change the color of links on hover */
@@ -36,15 +37,7 @@ border: 2px solid black;
   color: white;
 }
 */
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
+
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
@@ -66,6 +59,7 @@ h2 {
 color: #800000;
 font-weight: bold;
 text-align:center;
+font-size: 30px;
 }
 
 body {
@@ -79,25 +73,26 @@ border-color:black;
 	</style>
 	
 </head>
-<body>
 	<h1>
 <a href = "..\index.html">	
 <img src = "..\images\Logo.png" 
 id = "Logo" alt="" height = 100 width = 200>
 </a></h1>	
+
 </head>
+
 <body>
 
 	<h2>Worker</h2>
 	<hr>
 
 	 <div class="topnav">
-  <a href="Hhome.html">Home</a>
-  <a href="Hmessages.html">Messages</a>
-  <a href="Hreviews.html">Read Reviews</a>
-  <a href="Happly.html">Apply</a>
-  <input type="text" placeholder="Search..">
-</div> 
+		<a href="Hhome.html">Home</a>
+  		<a href="Hreviews.html">Read Reviews</a>
+		<a href="Happly.html">Apply</a>
+  		<a href="form.html">Login</a>
+
+	</div> 
 
 </body>
 </html>
