--- a/pages/form.html
+++ b/pages/form.html
@@ -3,6 +3,11 @@
 <html>
 <head>
 	<title>Form</title>
+	<h1>
+	<a href = "..\index.html">	
+	<img src = "..\images\Logo.png" 
+	id = "Logo" alt="" height = 100 width = 200>
+	</a></h1>
 
 
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -13,7 +18,7 @@
 </head>
 <body>
 
-	<h1> Login page </h1>
+	<h2>Login</h2>
 
 	<div id="formContainer">
 
@@ -29,4 +34,22 @@
 
 	</div>
 </body>
+<style>
+
+h2 {
+text-align: center;
+font-size: 30px;
+}
+body {
+background-image: url(../images/WoodFloor.jpg);
+border: 5px solid transparent;
+padding: 0px 20px 500px 20px;
+border-color:black;
+}
+#formContainer {
+text-align: center;
+font-size: 30px;
+}
+
+</style>
 </html>
