--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -114,17 +114,22 @@ font-weight: light;
 	  editedString = myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
 	  myString = myString.slice(myString.indexOf("}")+1);
 	  while (myString.indexOf("{") >= 0){
-		editedString = editedString + "<br>" + myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+		editedString = editedString + "<br><br>" + myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
 		myString = myString.slice(myString.indexOf("}")+1);
 	  }
 	  while (editedString.indexOf("\"") >= 0){
 		editedString = editedString.replace("\"", " ");
 	  }
 	  while (editedString.indexOf(" , ") >= 0){
-		editedString = editedString.replace(" , ", ",\t");
+		editedString = editedString.replace(" , ", "<br>");
+	  }
+	  while (editedString.indexOf("_") >= 0){
+		editedString = editedString.replace("_", " ");
 	  }
 	  
-	  var editedString = myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+	  //var editedString = myString.slice(myString.indexOf("{")+1, myString.indexOf("}"));
+	  
+	  
 	  
       document.getElementById("first").innerHTML = editedString;
 	  
