--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -96,7 +96,8 @@ id = "Logo" alt="" height = 100 width = 200>
   		<a href="Cmessages.html">Messages</a>
   		<a href="Csearchworkers.html">Search Workers</a>
   		<a href="Creviews.html">Write Reviews</a>
-  		<input type="text" placeholder="Search..">
+  		<a href="Creadreviews.html">Read Reviews</a>
+		
 	</div> 
 		<form id = "Plumber" action="">
 			<input type="submit" value="Plumber" />
