--- a/pages/Cmessages.html
+++ b/pages/Cmessages.html
@@ -15,7 +15,7 @@
   <a class="active" href="Cmessages.html">Messages</a>
   <a href="Csearchworkers.html">Search Workers</a>
   <a href="Creviews.html">Write Reviews</a>
-  <input type="text" placeholder="Search..">
+  <a href="Creadreviews.html">Read Reviews</a>
 </div> 
 		
 		
