--- a/pages/Creviews.html
+++ b/pages/Creviews.html
@@ -53,7 +53,8 @@ function SubForm (){
   <a href="Cmessages.html">Messages</a>
   <a href="Csearchworkers.html">Search Workers</a>
   <a class="active" href="#write reviews">Write Reviews</a>
-  <input type="text" placeholder="Search..">
+  <a href="Creadreviews.html">Read Reviews</a>
+  
 </div> 
 		
 	
