--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -17,7 +17,7 @@
   <a href="Cmessages.html">Messages</a>
   <a class="active" href="#search workers">Search Workers</a>
   <a href="Creviews.html">Write Reviews</a>
-  <input type="text" placeholder="Search..">
+  <a href="Creadreviews.html">Read Reviews</a>
 </div> 
 		
 	<form action="Plumbers.html">
