--- a/pages/Creadreviews.html
+++ b/pages/Creadreviews.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<title>Worker</title>
+	<title>Customer</title>
 	<h1>
 	<a href = "..\index.html">	
 	<img src = "..\images\Logo.png" 
