--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -99,17 +99,13 @@ id = "Logo" alt="" height = 100 width = 200>
   		<a href="Creadreviews.html">Read Reviews</a>
 		
 	</div> 
-		<form id = "Plumber" action="">
-			<input type="submit" value="Plumber" />
-		</form>
-		
-		<form id = "Handyman" action="">
-			<input type="submit" value="Handyman" />
-		</form>
-	
-		<form id = "Other" action="">
-			<input type="submit" value="Other" />
-		</form>		
+		<h1> This is the page for customers seeking workers. </h1>
+	<h2> Here is an explanation of the buttons on the navigation bar:<br>
+		<br>
+		Search Workers: shows a list of workers with their job titles, with their contact information and availability below.<br>
+		Write Reviews: this is where customers can leave reviews for the workers they have worked with.<br>
+		Read Reviews: this is where customers can read reviews about workers to help determine who they would like to hire.
+		</h2>	
 </body>
 </html>
 
