--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -93,6 +93,14 @@ id = "Logo" alt="" height = 100 width = 200>
   		<a href="form.html">Login</a>
 
 	</div> 
-
+<h1> This is the page for workers offering their services to customers. </h1>
+	<h3> Here is an explanation of the buttons on the navigation bar:<br>
+		<br>
+		Read Reviews: this is where workers can read reviews about themselves or other workers to get feedback from customers.<br>
+		Apply: this is where workers can submit their name, contact information, etc. to enable customers to contact them. <br>
+		Login: this is where workers can login.
+		
+		</h3>
+	
 </body>
 </html>
