Shows Worker's Info

--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -17,25 +17,82 @@
   <a href="Cmessages.html">Messages</a>
   <a class="active" href="#search workers">Search Workers</a>
   <a href="Creviews.html">Write Reviews</a>
-  <a href="Creadreviews.html">Read Reviews</a>
+  <input type="text" placeholder="Search..">
 </div> 
 		
-	<form action="Plumbers.html">
-			<input type="submit" value="Plumber" />
-		</form>
-		
-		<form action="">
-			<input type="submit" value="Handyman" />
-		</form>
 	
-		<!-- <form action=""> 
-			<input type="submit" value="Other" />
-		</form> -->
-
+		
   <!-- The following frame adds the list of jobs submitted on the google form application -->
-  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A2:B&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="700" seamless frameborder="0"></iframe>
+	<div style="padding: 20px">
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0"></iframe>
+	
+	<h2>Worker Details</h2>	
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C29&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	
+	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	
+	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
+			<input type="submit" value="Book this Worker" />
+	</form>
+
+
+	<div class="space"></div>
+
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C10&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
+			<input type="submit" value="Book this Worker" />
+	</form>
+	
+	<div class="space"></div>
+
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A58:C67&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A69:B73&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	
+	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
+			<input type="submit" value="Book this Worker" />
+	</form>
+	
+	<div class="space"></div>
+
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A75:C84&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A89:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
+			<input type="submit" value="Book this Worker" />
+	</form>
+	
+	<div class="space"></div>
+
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A39:C48&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+
+	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+
+	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
+			<input type="submit" value="Book this Worker" />
+	</form>
+
+
+		<!-- <a href="Chome.html" style="bottom: 690px" class="table">Testing</a> -->
+
+	</div>
+
 		<style>
 /* Add a black background color to the top navigation bar */
+.space{
+	padding-bottom: 50px;
+}
+.table{
+	
+	position: relative;
+	left: 600px;
+}
+
+
 .topnav {
   overflow: hidden;
   background-color: #e9e9e9;
