--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -32,19 +32,16 @@
 	<h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
 	
-	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
-			<input type="submit" value="Book this Worker" />
-	</form>
-
-
+	<button onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	
 	<div class="space"></div>
 
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C10&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
 	<h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
-	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
-			<input type="submit" value="Book this Worker" />
-	</form>
+	<button onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
@@ -52,18 +49,16 @@
 	<h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A69:B73&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
 	
-	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
-			<input type="submit" value="Book this Worker" />
-	</form>
+	<button onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A75:C84&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
 	<h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A86:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
-	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
-			<input type="submit" value="Book this Worker" />
-	</form>
+	<button onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
@@ -72,12 +67,9 @@
 	<h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
 
-	<form style="position: relative; left: 50%; bottom: 300px" id = "Plumber" action="">
-			<input type="submit" value="Book this Worker" />
-	</form>
+	<button onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 
-
-		<!-- <a href="Chome.html" style="bottom: 690px" class="table">Testing</a> -->
 
 	</div>
 
