--- a/pages/Chome.html
+++ b/pages/Chome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
+
 	<title>Customer</title>
 	
 	<style type="text/css">
@@ -20,7 +20,8 @@ border: 2px solid black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  border-right: 1px solid black;
 }
 
 /* Change the color of links on hover */
@@ -30,20 +31,13 @@ border: 2px solid black;
 }
 
 /* Style the "active" element to highlight the current page */
+/*
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
+*/
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
@@ -65,6 +59,11 @@ h2 {
 color: #800000;
 font-weight: bold;
 text-align:center;
+font-size: 30px;
+}
+
+h4 {
+font-size: 25px;
 }
 
 body {
@@ -72,40 +71,35 @@ background-image: url(../images/WoodFloor.jpg);
 border: 5px solid transparent;
 padding: 0px 20px 500px 20px;
 border-color:black;
-
 }
 
-#Plumber, #Handyman, #Other {
-padding-top: 10px;
-}
 	</style>
 	
 </head>
-<body>
 	<h1>
 <a href = "..\index.html">	
 <img src = "..\images\Logo.png" 
 id = "Logo" alt="" height = 100 width = 200>
-</a></h1>
+</a></h1>	
+
+</head>
 	<h2>Customer</h2>
 	<hr>
 	
 	<div class="topnav">
-		
   		<a class="active" href="Chome.html">Home</a>
-  		<a href="Cmessages.html">Messages</a>
   		<a href="Csearchworkers.html">Search Workers</a>
   		<a href="Creviews.html">Write Reviews</a>
   		<a href="Creadreviews.html">Read Reviews</a>
-		
 	</div> 
-		<h1> This is the page for customers seeking workers. </h1>
-	<h3> Here is an explanation of the buttons on the navigation bar:<br>
+	<h4> Here is an explanation of the buttons on the navigation bar:<br>
 		<br>
-		Search Workers: shows a list of workers with their job titles, with their contact information and availability below.<br>
-		Write Reviews: this is where customers can leave reviews for the workers they have worked with.<br>
-		Read Reviews: this is where customers can read reviews about workers to help determine who they would like to hire.
-		</h3>	
+		<ul>
+		<li>Search Workers: shows a list of workers with their job titles, with their contact information and availability below.<br></li>
+		<li>Write Reviews: this is where customers can leave reviews for the workers they have worked with.<br> </li>
+		<li>Read Reviews: this is where customers can read reviews about workers to help determine who they would like to hire. </li>
+		</ul>	
+		</h4>	
 </body>
 </html>
 
