--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
-	<title>Customer</title>
 	
+	<title>Customer</title>
+
+	<h1>
+<a href = "..\index.html">	
+<img src = "..\images\Logo.png" 
+id = "Logo" alt="" height = 100 width = 200>
+</a></h1>	
+
 </head>
+
 <body>
 	
-	<h1><center>Customer Page</center></h1>
+	<h2><center>Customer</center></h2>
 	<hr>
 	
 	
 	
 	<div class="topnav">
   <a href="Chome.html">Home</a>
-  <a href="Cmessages.html">Messages</a>
   <a class="active" href="#search workers">Search Workers</a>
   <a href="Creviews.html">Write Reviews</a>
-  <input type="text" placeholder="Search..">
+  <a href="Creadreviews.html">Read Reviews</a>
+  
 </div> 
 		
 	
 		
   <!-- The following frame adds the list of jobs submitted on the google form application -->
 	<div style="padding: 20px">
+	<div class = "WorkerList">
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0"></iframe>
-	
+	</div>
 	<h2>Worker Details</h2>	
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C29&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
 	
@@ -72,33 +80,25 @@
 
 
 	</div>
+</body>
 
 		<style>
-/* Add a black background color to the top navigation bar */
-.space{
-	padding-bottom: 50px;
-}
-.table{
-	
-	position: relative;
-	left: 600px;
-}
-
-
 .topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+overflow: hidden;
+background-color: #800000;
+border: 2px solid black;
 }
-
+		
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  border-right: 1px solid black;
 }
 
 /* Change the color of links on hover */
@@ -108,20 +108,13 @@
 }
 
 /* Style the "active" element to highlight the current page */
+/*
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
+*/
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
@@ -136,6 +129,32 @@
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-}		
-</body>
+}
+
+
+h2 {
+color: #800000;
+font-weight: bold;
+text-align:center;
+font-size: 30px;
+}
+
+h3 {
+font-size: 30px;
+color: #800000;
+}
+
+h4 {
+font-size: 20px;
+}
+
+body {
+background-image: url(../images/WoodFloor.jpg);
+border: 5px solid transparent;
+padding: 0px 20px 500px 20px;
+border-color:black;
+}
+
+	</style>
+	
 </html>
