--- a/pages/Creviews.html
+++ b/pages/Creviews.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
+	
 	<title>Customer</title>
-	
-	
-	
-	
+	<h1>
+		<a href = "..\index.html">	
+		<img src = "..\images\Logo.png" 
+		id = "Logo" alt="" height = 100 width = 200>
+	</a></h1>	
 	
 	<script
   src="https://code.jquery.com/jquery-3.4.1.js"
@@ -27,30 +28,16 @@ function SubForm (){
     });
 }
 </script>
-	
-	
-	
-	
+		
 </head>
-<body>
-	
-	
-	
-	
-	
-	
-	
 
-	
-	
-	
-	
-	<h1><center>Customer Page</center></h1>
+
+<body>	
+	<h2><center>Customer</center></h2>
 	<hr>
 	
 	<div class="topnav">
   <a href="Chome.html">Home</a>
-  <a href="Cmessages.html">Messages</a>
   <a href="Csearchworkers.html">Search Workers</a>
   <a class="active" href="#write reviews">Write Reviews</a>
   <a href="Creadreviews.html">Read Reviews</a>
@@ -61,47 +48,52 @@ function SubForm (){
 	
 	
 	<form id="myForm">
-    <label>Worker's name</label>
+    <div class = "header">
+    <label>Worker's Name</label>
     <br/>
     <input name="Worker_Name" />
    
     <br/>
-    <label>Rating</label>
+    <label style = "padding-top: 100px;">Rating</label>
     <br/>
     <input type="radio" id="Rating" name="Rating" value="5" /> 5<br/>
     <input type="radio" id="Rating" name="Rating" value="4" /> 4<br/>
     <input type="radio" id="Rating" name="Rating" value="3" /> 3<br/>
-	<input type="radio" id="Rating" name="Rating" value="2" /> 2<br/>
+    <input type="radio" id="Rating" name="Rating" value="2" /> 2<br/>
     <input type="radio" id="Rating" name="Rating" value="1" /> 1<br/>
-   <br/>
+    <br/>
     <label>Additional Feedback</label>
     <br/>
     <textarea name="Additional_Feedback">
     </textarea>
     <br/>
     <br/>
+    </div>
   </form>
   <button onclick="SubForm()">Submit</button>
-	
-	
-	
-	
-		<style>
-/* Add a black background color to the top navigation bar */
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
 
+</body>
+	
+	
+	
+	
+<style>
+.topnav {
+overflow: hidden;
+background-color: #800000;
+border: 2px solid black;
+}
+		
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  border-right: 1px solid black;
 }
 
 /* Change the color of links on hover */
@@ -111,20 +103,13 @@ function SubForm (){
 }
 
 /* Style the "active" element to highlight the current page */
+/*
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
+*/
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
@@ -139,13 +124,29 @@ function SubForm (){
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
-}		
+}
 
 
+h2 {
+color: #800000;
+font-weight: bold;
+text-align:center;
+font-size: 30px;
+}
 
+.header {
+font-size: 25px;
+font-weight: bold;
+padding-top: 30px;
+}
 
+body {
+background-image: url(../images/WoodFloor.jpg);
+border: 5px solid transparent;
+padding: 0px 20px 500px 20px;
+border-color:black;
+}
 
-
-
-</body>
+	</style>	
+		
 </html>
