--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -61,6 +61,9 @@ font-weight: bold;
 text-align:center;
 font-size: 30px;
 }
+h3 {
+font-size: 25px;
+}
 
 body {
 background-image: url(../images/WoodFloor.jpg);
@@ -93,13 +96,13 @@ id = "Logo" alt="" height = 100 width = 200>
   		<a href="form.html">Login</a>
 
 	</div> 
-<h1> This is the page for workers offering their services to customers. </h1>
 	<h3> Here is an explanation of the buttons on the navigation bar:<br>
 		<br>
-		Read Reviews: this is where workers can read reviews about themselves or other workers to get feedback from customers.<br>
-		Apply: this is where workers can submit their name, contact information, etc. to enable customers to contact them. <br>
-		Login: this is where workers can login.
-		
+		<ul>
+		<li>Read Reviews: this is where workers can read reviews about themselves or other workers to get feedback from customers.<br> </li>
+		<li>Apply: this is where workers can submit their name, contact information, etc. to enable customers to contact them. <br> </li>
+		<li>Login: this is where workers can login. </li>
+		</ul>
 		</h3>
 	
 </body>
