--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -94,7 +94,7 @@ font-weight: light;
 }		
 </style>
 
-<p> Reviews:<br/>
+<p style = "color: #800000; font-weight: bold"> Reviews:<br/> </p>
 <p><span id="first"> </span><br />
 
     <script >
