--- a/pages/Cconfirm.html
+++ b/pages/Cconfirm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="form.html"><input type="button" value="Login" style="float: right;"></a>
+	
 	<title>Customer</title>
 	
 	<style type="text/css">
@@ -20,7 +20,8 @@ border: 2px solid black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
+  border-right: 1px solid black;
 }
 
 /* Change the color of links on hover */
@@ -30,20 +31,13 @@ border: 2px solid black;
 }
 
 /* Style the "active" element to highlight the current page */
+/*
 .topnav a.active {
   background-color: #2196F3;
   color: white;
 }
+*/
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-  float: right;
-  padding: 6px;
-  border: none;
-  margin-top: 8px;
-  margin-right: 16px;
-  font-size: 17px;
-}
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
@@ -65,6 +59,7 @@ h2 {
 color: #800000;
 font-weight: bold;
 text-align:center;
+font-size: 30px;
 }
 
 body {
@@ -72,12 +67,14 @@ background-image: url(../images/WoodFloor.jpg);
 border: 5px solid transparent;
 padding: 0px 20px 500px 20px;
 border-color:black;
-
 }
 
 .message{
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  padding-top: 30px;
+  color: #800000;
+  font-weight: bold;
 }
 
 
@@ -96,10 +93,10 @@ id = "Logo" alt="" height = 100 width = 200>
 	<div class="topnav">
 		
   		<a href="Chome.html">Home</a>
-  		<a href="Cmessages.html">Messages</a>
   		<a href="Csearchworkers.html">Search Workers</a>
   		<a href="Creviews.html">Write Reviews</a>
-  		<input type="text" placeholder="Search..">
+		<a href="Creadreviews.html">Read Reviews</a>
+  		
 	</div> 
 		<p class="message">You have successfully booked the worker!</p>
 </body>
